[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "meu"
description = "A Rust-powered set of convenient command-line tools for everyday tasks."
authors = [{ name = "Campbell Brown", email = "campbellbrown093@gmail.com" }]
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["rust", "ssh"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/campbellmbrown/meu"
source = "https://github.com/campbellmbrown/meu"
issues = "https://github.com/campbellmbrown/meu/issues"
